Remove mention of reward function experiments

--- a/report/appendix/hyperparameters_experiment.tex
+++ b/report/appendix/hyperparameters_experiment.tex
@@ -1,6 +1,6 @@
 \chapter{Default Hyper-parameter Selection} \label{app:experiment_hyperparameters}
 
-The choice of hyper-parameters is crucial for the performance of \acrshort{drl} algorithms. However, it is computationally expensive to perform hyper-parameter tuning for all combinations of algorithms, datasets, environment representations, and reward functions. Therefore, the default hyper-parameters used in the experiments are outlined in Table \ref{tab:default_hyperparameters}. These hyper-parameters were selected based on preliminary tests conducted on a small dataset of five tickers (AAPL, CSCO, HON, MSFT, V) sampled from the \acrshort{djia} and only the open, close, high and low prices as the environment representation.
+The choice of hyper-parameters is crucial for the performance of \acrshort{drl} algorithms. However, it is computationally expensive to perform hyper-parameter tuning for all combinations of algorithms, datasets and environment representations. Therefore, the default hyper-parameters used in the experiments are outlined in Table \ref{tab:default_hyperparameters}. These hyper-parameters were selected based on preliminary tests conducted on a small dataset of five tickers (AAPL, CSCO, HON, MSFT, V) sampled from the \acrshort{djia} and only the open, close, high and low prices as the environment representation.
 
 The hyper-parameters were tuned according to the specifications in Table \ref{tab:model_hyperparameters} and the results were used to inform the default settings, outlined in Table \ref{tab:default_hyperparameters}. For each of the five \acrshort{drl} algorithms, the hyper-parameter search was performed using Bayesian optimisation using the \texttt{wandb} library and a maximum number of runs set to 20. The training set was data from January 2016 to December 2022, the validation set started in January 2023 and ended in December 2023, and the test set was between January 2024 and June 2025. The dataset split is visualised in Figure \ref{fig:dataset_split}. 
 
