--- a/report/contents/issues.tex
+++ b/report/contents/issues.tex
@@ -29,7 +29,7 @@ The ethical implications of \acrshort{drl} in portfolio optimisation are multifa
 
 Regarding the environment representation, it was not possible to incorporate such data as it is not readily available nor in a standardised format. This is why, although there was an interest to broaden the environment representation to include other sources outside of the financial domain, it was not feasible to do so given the available resources.
 
-A critical point in portfolio allocation is risk management. One of the reward functions used in this research balances return maximisation with risk minimisation, ensuring that the agent learns to avoid overly risky investments. Additionally, the inclusion of a risk-free asset enables a safe-guard mechanism. The agent can be implemented to allocate all the resources to cash when market volatility exceeds a pre-defined threshold and resume only when said volatility decreases.
+A critical point in portfolio allocation is risk management. In this research, a performance metric that balances return maximisation and risk minimisation is used for hyper-parameter tuning, ensuring that the agent learns to avoid overly risky investments. Additionally, the inclusion of a risk-free asset enables a safe-guard mechanism. The agent can be implemented to allocate all the resources to cash when market volatility exceeds a pre-defined threshold and resume only when said volatility decreases.
 
 Finally, potential biases in the training data or model structure could result in allocations favouring certain industries or assets classes. This thesis mitigates such biases by constructing a portfolio from diversified indices (Appendix \ref{sec:datasets-equities}) and using explainability techniques to audit the decisions for systematic biases.
 
