--- a/report/tables/experiments_summary.tex
+++ b/report/tables/experiments_summary.tex
@@ -1,32 +1,30 @@
 \begin{longtable}{|p{3cm}|p{3cm}|p{3.5cm}|p{3.5cm}|}
     \hline
-    \textbf{Dataset} & \textbf{Environment Representation} & \textbf{Reward Function} & \textbf{Hyper-parameter Tuning} \\ \midrule
+    \textbf{Dataset} & \textbf{Environment Representation} & \textbf{Hyper-parameter Tuning} \\ \midrule
     \endfirsthead
 
     \hline
-    \textbf{Dataset} & \textbf{Environment Representation} & \textbf{Reward Function} & \textbf{Hyper-parameter Tuning} \\ \midrule
+    \textbf{Dataset} & \textbf{Environment Representation} & \textbf{Hyper-parameter Tuning} \\ \midrule
     \endhead
 
     \endfoot
     \hline
-    Dow Jones 30    & Simple         & Change in Value & Yes \\ \hline
-    Dow Jones 30    & Covariance     & Change in Value & No \\ \hline
-    Dow Jones 30    & Indicators     & Change in Value & Yes \\ \hline
-    Dow Jones 30    & Complete       & Change in Value & No \\ \hline
-    Dow Jones 30    & Simple         & Sharpe Ratio    & Yes \\ \hline
-    Dow Jones 30    & Indicators     & Sharpe Ratio    & Yes \\ \hline
-    Euro Stoxx 50   & Simple         & Change in Value & No  \\ \hline
-    Euro Stoxx 50   & Indicators     & Change in Value & No  \\ \hline
-    FTSE 100        & Simple         & Change in Value & No  \\ \hline
-    FTSE 100        & Indicators     & Change in Value & No  \\ \hline
-    Commodities     & Simple         & Change in Value & No  \\ \hline
-    Commodities     & Covariance     & Change in Value & No  \\ \hline
-    Commodities     & Indicators     & Change in Value & No  \\ \hline
-    Commodities     & Complete       & Change in Value & No  \\ \hline
-    Currencies      & Simple         & Change in Value & No  \\ \hline
-    Currencies      & Covariance     & Change in Value & No  \\ \hline
-    Currencies      & Indicators     & Change in Value & No  \\ \hline
-    Currencies      & Complete       & Change in Value & No  \\ \hline
+    Dow Jones 30    & Simple         & Yes \\ \hline
+    Dow Jones 30    & Covariance     & No \\ \hline
+    Dow Jones 30    & Indicators     & Yes \\ \hline
+    Dow Jones 30    & Complete       & No \\ \hline
+    Euro Stoxx 50   & Simple         & No  \\ \hline
+    Euro Stoxx 50   & Indicators     & No  \\ \hline
+    FTSE 100        & Simple         & No  \\ \hline
+    FTSE 100        & Indicators     & No  \\ \hline
+    Commodities     & Simple         & No  \\ \hline
+    Commodities     & Covariance     & No  \\ \hline
+    Commodities     & Indicators     & No  \\ \hline
+    Commodities     & Complete       & No  \\ \hline
+    Currencies      & Simple         & No  \\ \hline
+    Currencies      & Covariance     & No  \\ \hline
+    Currencies      & Indicators     & No  \\ \hline
+    Currencies      & Complete       & No  \\ \hline
 \caption{Summary of experiments conducted.}
 \label{tab:experiments-summary}
 \end{longtable}
