--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -35,7 +35,7 @@ The current chapter, \ref{ch:introduction}, presents the motivation and the obje
 
 Chapter \ref{ch:background} provides an overview of the theoretical background of the project, including portfolio allocation and \acrlong{machinelearning} concepts. The problem of portfolio optimisation in the financial domain is outlined and the potential of \acrshort{drl} in this context is discussed. The chapter provides a comprehensive background explanation of the fundamentals of \acrlong{dl} and \acrlong{rl}, including the main algorithms (\acrshort{a2c}, \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3}, \acrshort{sac}). In addition, it gives an overview of the post-hoc explainability techniques: \Gls{featureimportance},\acrfull{lime} analysis and \acrfull{shap} values, which will be used to interpret the model's decisions. Finally, it includes a comprehensive in-depth literature review on the topics of \acrshort{ml} applied to portfolio optimisation and relevant applications of explainability techniques. 
 
-The methodology, chapter \ref{ch:methodology}, describes the techniques and methods used to tackle the problem and outlines the implementation of the proposed solution. The chapter provides a detailed explanation of the architecture and components of the proposed \acrshort{drl} model, including the state representation and reward functions. Furthermore, given the trained algorithms, it describes the implementation of the post-hoc explainability techniques.
+The methodology, chapter \ref{ch:methodology}, describes the techniques and methods used to tackle the problem and outlines the implementation of the proposed solution. The chapter provides a detailed explanation of the architecture and components of the proposed \acrshort{drl} model, including the state representation and reward function. Furthermore, given the trained algorithms, it describes the implementation of the post-hoc explainability techniques.
 
 The results of the experiments are presented in chapter \ref{ch:results}, which analyses and evaluates the results obtained from the proposed implementation, while critically discussing the findings. It provides a detailed comparison of the proposed \acrshort{drl} strategies with traditional portfolio optimisation methods. Furthermore, it consists of an in-depth analysis of the model's decisions using post-hoc explainability techniques, in particular, feature importance, \acrshort{lime} and \acrshort{shap}.  
 
