Use of singular

--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -158,7 +158,7 @@ The feature importance results from the surrogate model are shown in Figure \ref
     \label{fig:feature_importance_top_features}
 \end{figure}
 
-These trend is further confirmed by looking at the mean importance of the features for each asset, as shown in Figure \ref{fig:mean_feature_importance_by_asset}. This indicates that the agent heavily relied on the performance of MSFT and CSCO to guide its portfolio allocation decisions, while the other assets played a less significant role. 
+This trend is further confirmed by looking at the mean importance of the features for each asset, as shown in Figure \ref{fig:mean_feature_importance_by_asset}. This indicates that the agent heavily relied on the performance of MSFT and CSCO to guide its portfolio allocation decisions, while the other assets played a less significant role. 
 
 \begin{figure}
     \centering
